--- a/game/type.html
+++ b/game/type.html
@@ -16,45 +16,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/css/header/swiper.min.css" />
   <link rel="stylesheet" type="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/css/header/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/css/header/head.css" />
-
-  <style>
-    .content {
-      background-color: #fff;
-    }
-
-    .play-imgs {
-      cursor: pointer;
-      position: absolute;
-      right: 0;
-    }
-
-    .play-imgs img {
-      width: 50px;
-    }
-
-    .img-fluid {
-      width: 100%;
-    }
-
-    .score-icon {
-      display: inline-block;
-      width: 24px;
-      height: 24px;
-      background-image: url(https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/start.svg);
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-  </style>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  </script>
-  <noscript>
-    <img src="https://data.ad-score.com/img?s=ns&pid=1000924&tid=MW&l1=h5gamelist.cc&l2=22844476659&l3=HK" width="1"
-      height="1">
-    </img>
-  </noscript>
   <div id="app">
     <!-- 导航 -->
     <header class="header">
@@ -93,7 +58,16 @@
     <main>
       <section class="section">
         <center>
-          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867" data-ad-slot="6407263691" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+          <!-- game_type_top -->
+					<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-7962287588031867"
+					data-ad-slot="6407263691"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
         </center>
         <div class="container">
           <div class="row">
@@ -134,6 +108,34 @@
       </section>
     </main>
   </div>
+	<style>
+    .content {
+      background-color: #fff;
+    }
+
+    .play-imgs {
+      cursor: pointer;
+      position: absolute;
+      right: 0;
+    }
+
+    .play-imgs img {
+      width: 50px;
+    }
+
+    .img-fluid {
+      width: 100%;
+    }
+
+    .score-icon {
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      background-image: url(https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/start.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  </style>
 </body>
 <script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/main.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/js/vue.min.js"></script>
