--- a/beauty/index.html
+++ b/beauty/index.html
@@ -42,17 +42,17 @@
     <main>
       <section class="section">
         <center>
-          <!-- game_type_top -->
+					<!-- game_index_1 -->
 					<ins class="adsbygoogle"
 					style="display:block"
 					data-ad-client="ca-pub-7962287588031867"
-					data-ad-slot="6407263691"
+					data-ad-slot="6965682803"
 					data-ad-format="auto"
 					data-full-width-responsive="true"></ins>
 					<script>
 					(adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
-        </center>
+				</center>
         <div class="container">
           <div class="row">
             <div class="col-12">
@@ -61,7 +61,18 @@
               </div>
             </div>
           </div>
-
+					<center>
+						<!-- game_index_2 -->
+						<ins class="adsbygoogle"
+						style="display:block"
+						data-ad-client="ca-pub-7962287588031867"
+						data-ad-slot="8566539081"
+						data-ad-format="auto"
+						data-full-width-responsive="true"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</center>
           <div class="row">
             <div class="col-lg-3 mt-4 pt-2" v-for="item in list" :key="item.gameId">
               <a :href="handleToDetail(item.gameId, 'Popular')">
