feat(game): add ad script to game detail page

--- a/game/detail.html
+++ b/game/detail.html
@@ -81,6 +81,16 @@
             <a class="game-button" :href="handleToPlay()" v-else>PLAY NOW</a>
           </div>
         </div>
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'd33a66142fa9a0cf8436ef4ed4f597f1',
+						'format' : 'iframe',
+						'height' : 90,
+						'width' : 728,
+						'params' : {}
+					};
+				</script>
+				<script type="text/javascript" src="//www.highperformanceformat.com/d33a66142fa9a0cf8436ef4ed4f597f1/invoke.js"></script>
       </section>
       <section class="section">
         <div class="container">
