--- a/game/index.html
+++ b/game/index.html
@@ -88,6 +88,18 @@
 								(adsbygoogle = window.adsbygoogle || []).push({});
 								</script>
               </center>
+<center>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'd33a66142fa9a0cf8436ef4ed4f597f1',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/d33a66142fa9a0cf8436ef4ed4f597f1/invoke.js"></script>
+</center>
 							<div class="col-lg-3 mt-4 pt-2" v-for="item in popular" :key="item.gameId">
 								<a :href="handleToDetail(item.gameId, 'Popular')">
 									<div class="position-relative overflow-hidden blog  rounded shadow">
