--- a/game/index.html
+++ b/game/index.html
@@ -89,16 +89,8 @@
 								</script>
               </center>
 <center>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'd33a66142fa9a0cf8436ef4ed4f597f1',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/d33a66142fa9a0cf8436ef4ed4f597f1/invoke.js"></script>
+<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
 </center>
 							<div class="col-lg-3 mt-4 pt-2" v-for="item in popular" :key="item.gameId">
 								<a :href="handleToDetail(item.gameId, 'Popular')">
