--- a/game/index.html
+++ b/game/index.html
@@ -150,6 +150,7 @@
         background-size: contain;
       }
     </style>
+    <script type='text/javascript' src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
 	</body>
 	<script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/main.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/js/gameData.js"></script>
