--- a/game/index.html
+++ b/game/index.html
@@ -54,18 +54,6 @@
 				</ul>
 			</div>
 			<main>
-   <center>
-    <!-- game_index_1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7962287588031867"
-     data-ad-slot="6965682803"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-   </center>
 				<section class="section">
           <div class="container">
 						<div class="row">
@@ -75,24 +63,24 @@
 								</div>
 							</div>
 						</div>
+						<center>
+							<!-- game_index_1 -->
+							<ins class="adsbygoogle"
+									style="display:block"
+									data-ad-client="ca-pub-7962287588031867"
+									data-ad-slot="6965682803"
+									data-ad-format="auto"
+									data-full-width-responsive="true"></ins>
+							<script>
+									(adsbygoogle = window.adsbygoogle || []).push({});
+							</script>
+						</center>
 						<div class="row">
-              <center>
-								<!-- game_index_2 -->
-								<ins class="adsbygoogle"
-								style="display:block"
-								data-ad-client="ca-pub-7962287588031867"
-								data-ad-slot="8566539081"
-								data-ad-format="auto"
-								data-full-width-responsive="true"></ins>
-								<script>
-								(adsbygoogle = window.adsbygoogle || []).push({});
-								</script>
-              </center>
-<center>
-<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
-<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
-</center>
-							<div class="col-lg-3 mt-4 pt-2" v-for="item in popular" :key="item.gameId">
+							<center>
+								<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+								<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
+							</center>
+							<div class="col-lg-3 mt-4 pt-2" v-for="(item, index) in popular" :key="item.gameId">
 								<a :href="handleToDetail(item.gameId, 'Popular')">
 									<div class="position-relative overflow-hidden blog  rounded shadow">
 										<div class="position-relative overflow-hidden">
@@ -117,12 +105,25 @@
 										</div>
 									</div>
 								</a>
+								<center v-if="index === 0">
+									<!-- game_index_2 -->
+									<ins class="adsbygoogle"
+									style="display:block"
+									data-ad-client="ca-pub-7962287588031867"
+									data-ad-slot="8566539081"
+									data-ad-format="auto"
+									data-full-width-responsive="true"></ins>
+									<script>
+									(adsbygoogle = window.adsbygoogle || []).push({});
+									</script>
+								</center>
 							</div>
 						</div>
 					</div>
 				</section>
 			</main>
 		</div>
+		<script type='text/javascript' src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
 		<style>
       .content{
         background-color: #fff;
@@ -150,7 +151,6 @@
         background-size: contain;
       }
     </style>
-    <script type='text/javascript' src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
 	</body>
 	<script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/main.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/js/gameData.js"></script>
