--- a/beauty/index.html
+++ b/beauty/index.html
@@ -73,6 +73,10 @@
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
 					</center>
+    <center>
+     <script async="async" data-cfasync="false" src="//pl26583143.profitableratecpm.com/22e6f15dbe5d80449c2ffcaf375eb5ac/invoke.js"></script>
+<div id="container-22e6f15dbe5d80449c2ffcaf375eb5ac"></div>
+    </center>
           <div class="row">
             <div class="col-lg-3 mt-4 pt-2" v-for="item in list" :key="item.gameId">
               <a :href="handleToDetail(item.gameId, 'Popular')">
