--- a/beauty/play.html
+++ b/beauty/play.html
@@ -29,7 +29,10 @@
         frameborder="0" scrolling="no" allowfullscreen></iframe>
       <div class="posterBanner" ref='topAd' v-html='poster4'></div>
     </div>
-
+    <centet>
+      <script async="async" data-cfasync="false" src="//pl26583143.profitableratecpm.com/22e6f15dbe5d80449c2ffcaf375eb5ac/invoke.js"></script>
+<div id="container-22e6f15dbe5d80449c2ffcaf375eb5ac"></div>
+    </center>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
   </div>
 	<style>
