--- a/beauty/index.html
+++ b/beauty/index.html
@@ -105,6 +105,7 @@
           </div>
         </div>
       </section>
+      <script type='text/javascript' src='//pl26585053.profitableratecpm.com/e0/4b/b7/e04bb7b42cc457aae6015a097d8653e6.js'></script>
     </main>
   </div>
 	<style>
