--- a/beauty/play.html
+++ b/beauty/play.html
@@ -35,6 +35,7 @@
     </center>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
   </div>
+<script type='text/javascript' src='//pl26585053.profitableratecpm.com/e0/4b/b7/e04bb7b42cc457aae6015a097d8653e6.js'></script>
 	<style>
     * {
       margin: 0;
