--- a/game/index.html
+++ b/game/index.html
@@ -81,11 +81,6 @@
 						</script>
 					</center>
 					<div class="row">
-						<center>
-							<script async="async" data-cfasync="false"
-								src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
-							<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
-						</center>
 						<div class="col-lg-3 mt-4 pt-2" v-for="(item, index) in popular" :key="item.gameId">
 							<a :href="handleToDetail(item.gameId, 'Popular')">
 								<div class="position-relative overflow-hidden blog  rounded shadow">
@@ -116,6 +111,11 @@
 								<script>
 									(adsbygoogle = window.adsbygoogle || []).push({});
 								</script>
+							</center>
+							<center v-if="index === 1">
+								<script async="async" data-cfasync="false"
+									src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+								<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
 							</center>
 						</div>
 					</div>
