Fix script tag formatting in index.html and detail.html for consistency

--- a/action/index.html
+++ b/action/index.html
@@ -96,8 +96,7 @@
 								</script>
 							</center>
 							<center v-if="index === 1">
-								<script async="async" data-cfasync="false"
-									src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+								<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
 								<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
 							</center>
 						</div>
