--- a/beauty/detail.html
+++ b/beauty/detail.html
@@ -81,8 +81,10 @@
           </div>
         </div>
       </section>
-      <script async="async" data-cfasync="false" src="//pl26583143.profitableratecpm.com/22e6f15dbe5d80449c2ffcaf375eb5ac/invoke.js"></script>
-<div id="container-22e6f15dbe5d80449c2ffcaf375eb5ac"></div>
+			<center>
+				<script async="async" data-cfasync="false" src="//pl26583143.profitableratecpm.com/22e6f15dbe5d80449c2ffcaf375eb5ac/invoke.js"></script>
+				<div id="container-22e6f15dbe5d80449c2ffcaf375eb5ac"></div>
+			</center>
       <section class="section">
         <div class="container">
           <div class="row">
