--- a/new/detail.html
+++ b/new/detail.html
@@ -81,6 +81,10 @@
           </div>
         </div>
       </section>
+			<center>
+				<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+				<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
+      </center>
       <section class="section">
         <div class="container">
           <div class="row">
@@ -111,6 +115,7 @@
           </div>
         </div>
       </section>
+			<script type='text/javascript' src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
     </main>
   </div>
 	<style>
