--- a/new/index.html
+++ b/new/index.html
@@ -20,117 +20,117 @@
 </head>
 
 <body>
-  <div id="app">
-    <!-- 导航 -->
-    <header class="header">
-      <div class="container clearfix">
-        <div class="fl left">
-          <a :href="`index.html?gameChannelId=${gameChannelId}`"><img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" class="img1" /></a>
-          <a :href="`index.html?gameChannelId=${gameChannelId}`"><img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" class="img2" /></a>
-        </div>
-      </div>
-    </header>
-    <!--移动端的导航-->
-    <div class="m_nav">
-      <div class="top clearfix">
-        <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/closed.png" alt="" class="closed" />
-      </div>
-      <div class="logo">
-        <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" />
-      </div>
-    </div>
-    <main>
-      <section class="section">
-        <center>
-					<!-- game_index_1 -->
-					<ins class="adsbygoogle"
-					style="display:block"
-					data-ad-client="ca-pub-7962287588031867"
-					data-ad-slot="6965682803"
-					data-ad-format="auto"
-					data-full-width-responsive="true"></ins>
-					<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
-				</center>
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <div class="section-title text-center mb-4">
-                <h4 class="title">{{title}}</h4>
-              </div>
-            </div>
-          </div>
+	<div id="app">
+		<!-- 导航 -->
+		<header class="header">
+			<div class="container clearfix">
+				<div class="fl left">
+					<a :href="`index.html?gameChannelId=${gameChannelId}`"><img
+							src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" class="img1" /></a>
+					<a :href="`index.html?gameChannelId=${gameChannelId}`"><img
+							src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" class="img2" /></a>
+				</div>
+			</div>
+		</header>
+		<!--移动端的导航-->
+		<div class="m_nav">
+			<div class="top clearfix">
+				<img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/closed.png" alt="" class="closed" />
+			</div>
+			<div class="logo">
+				<img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" />
+			</div>
+		</div>
+		<main>
+			<section class="section">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<div class="section-title text-center mb-4">
+								<h4 class="title">{{title}}</h4>
+							</div>
+						</div>
+					</div>
 					<center>
-						<!-- game_index_2 -->
-						<ins class="adsbygoogle"
-						style="display:block"
-						data-ad-client="ca-pub-7962287588031867"
-						data-ad-slot="8566539081"
-						data-ad-format="auto"
-						data-full-width-responsive="true"></ins>
+						<!-- game_index_1 -->
+						<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
+							data-ad-slot="6965682803" data-ad-format="auto" data-full-width-responsive="true"></ins>
 						<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
+							(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
 					</center>
-          <div class="row">
-            <div class="col-lg-3 mt-4 pt-2" v-for="item in list" :key="item.gameId">
-              <a :href="handleToDetail(item.gameId, 'Popular')">
-                <div class="position-relative overflow-hidden blog  rounded shadow">
-                  <div class="position-relative overflow-hidden">
-                    <img :src="item.gameLogo" :data-src="item.gameLogo" :alt="`${item.gameLogo}|${item.gameId}`"
-                      class="img-fluid blog-img">
-                    <div class="blog-tag">
-                      <span class="badge bg-primary fw-light">play</span>
-                    </div>
-                  </div>
-                  <div class="content p-4 ">
-                    <div class="score" style="position: relative;  display: flex;align-items: center;">
-                      <span class="score-icon"></span>
-                      <span class="score_span" style="margin-left: 5px;font-size: 32px !important;"> 4.5</span>
-                      <div class="play-imgs">
-                        <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/play.png" alt="" />
-                      </div>
-                    </div>
-                    <small><i class="uil uil-calendar-alt"></i></small>
-                    <a href="#" class="title text-dark d-block mt-2 h5">{{item.gameName}}</a>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-  </div>
+					<div class="row">
+						<div class="col-lg-3 mt-4 pt-2" v-for="(item, index) in list" :key="item.gameId">
+							<a :href="handleToDetail(item.gameId, 'Popular')">
+								<div class="position-relative overflow-hidden blog  rounded shadow">
+									<div class="position-relative overflow-hidden">
+										<img :src="item.gameLogo" :data-src="item.gameLogo" :alt="`${item.gameLogo}|${item.gameId}`"
+											class="img-fluid blog-img">
+										<div class="blog-tag">
+											<span class="badge bg-primary fw-light">play</span>
+										</div>
+									</div>
+									<div class="content p-4 ">
+										<div class="score" style="position: relative;  display: flex;align-items: center;">
+											<span class="score-icon"></span>
+											<span class="score_span" style="margin-left: 5px;font-size: 32px !important;"> 4.5</span>
+											<div class="play-imgs">
+												<img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/play.png" alt="" />
+											</div>
+										</div>
+										<small><i class="uil uil-calendar-alt"></i></small>
+										<a href="#" class="title text-dark d-block mt-2 h5">{{item.gameName}}</a>
+									</div>
+								</div>
+							</a>
+							<center v-if="index === 0">
+								<!-- game_index_2 -->
+								<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
+									data-ad-slot="8566539081" data-ad-format="auto" data-full-width-responsive="true"></ins>
+								<script>
+									(adsbygoogle = window.adsbygoogle || []).push({});
+								</script>
+							</center>
+							<center v-if="index === 1">
+								<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+								<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
+							</center>
+						</div>
+					</div>
+				</div>
+			</section>
+			<script type='text/javascript'
+				src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
+		</main>
+	</div>
 	<style>
-    .content {
-      background-color: #fff;
-    }
+		.content {
+			background-color: #fff;
+		}
 
-    .play-imgs {
-      cursor: pointer;
-      position: absolute;
-      right: 0;
-    }
+		.play-imgs {
+			cursor: pointer;
+			position: absolute;
+			right: 0;
+		}
 
-    .play-imgs img {
-      width: 50px;
-    }
+		.play-imgs img {
+			width: 50px;
+		}
 
-    .img-fluid {
-      width: 100%;
-    }
+		.img-fluid {
+			width: 100%;
+		}
 
-    .score-icon {
-      display: inline-block;
-      width: 24px;
-      height: 24px;
-      background-image: url(https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/start.svg);
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-  </style>
+		.score-icon {
+			display: inline-block;
+			width: 24px;
+			height: 24px;
+			background-image: url(https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/start.svg);
+			background-repeat: no-repeat;
+			background-size: contain;
+		}
+	</style>
 </body>
 <script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/main.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/js/vue.min.js"></script>
