Add ad scripts to index.html, puzzle/index.html, sports/index.html, game/index.html, beauty/index.html, and new/index.html for enhanced monetization

--- a/action/index.html
+++ b/action/index.html
@@ -46,6 +46,14 @@
 			</div>
 		</div>
 		<main>
+			<center>
+				<!-- game_index_1 -->
+				<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
+					data-ad-slot="6965682803" data-ad-format="auto" data-full-width-responsive="true"></ins>
+				<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</center>
 			<section class="section">
 				<div class="container">
 					<div class="row">
@@ -56,9 +64,9 @@
 						</div>
 					</div>
 					<center>
-						<!-- game_index_1 -->
+						<!-- game_index_2 -->
 						<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
-							data-ad-slot="6965682803" data-ad-format="auto" data-full-width-responsive="true"></ins>
+							data-ad-slot="8566539081" data-ad-format="auto" data-full-width-responsive="true"></ins>
 						<script>
 							(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
@@ -88,14 +96,6 @@
 								</div>
 							</a>
 							<center v-if="index === 0">
-								<!-- game_index_2 -->
-								<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
-									data-ad-slot="8566539081" data-ad-format="auto" data-full-width-responsive="true"></ins>
-								<script>
-									(adsbygoogle = window.adsbygoogle || []).push({});
-								</script>
-							</center>
-							<center v-if="index === 1">
 								<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
 								<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
 							</center>
