--- a/beauty/index.html
+++ b/beauty/index.html
@@ -40,6 +40,18 @@
       </div>
     </div>
     <main>
+			<center>
+				<!-- game_index_1 -->
+				<ins class="adsbygoogle"
+				style="display:block"
+				data-ad-client="ca-pub-7962287588031867"
+				data-ad-slot="6965682803"
+				data-ad-format="auto"
+				data-full-width-responsive="true"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</center>
       <section class="section">
         <div class="container">
           <div class="row">
@@ -50,15 +62,11 @@
             </div>
           </div>
 					<center>
-						<!-- game_index_1 -->
-						<ins class="adsbygoogle"
-						style="display:block"
-						data-ad-client="ca-pub-7962287588031867"
-						data-ad-slot="6965682803"
-						data-ad-format="auto"
-						data-full-width-responsive="true"></ins>
+						<!-- game_index_2 -->
+						<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
+							data-ad-slot="8566539081" data-ad-format="auto" data-full-width-responsive="true"></ins>
 						<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
+							(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
 					</center>
           <div class="row">
@@ -86,14 +94,6 @@
                 </div>
               </a>
 							<center v-if="index === 0">
-								<!-- game_index_2 -->
-								<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
-									data-ad-slot="8566539081" data-ad-format="auto" data-full-width-responsive="true"></ins>
-								<script>
-									(adsbygoogle = window.adsbygoogle || []).push({});
-								</script>
-							</center>
-							<center v-if="index === 1">
 								<script async="async" data-cfasync="false" src="//pl26583143.profitableratecpm.com/22e6f15dbe5d80449c2ffcaf375eb5ac/invoke.js"></script>
 								<div id="container-22e6f15dbe5d80449c2ffcaf375eb5ac"></div>
 							</center>
