--- a/game/index.html
+++ b/game/index.html
@@ -36,16 +36,6 @@
 					<a :href="`index.html?gameChannelId=${gameChannelId}`"><img
 							src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" class="img2" /></a>
 				</div>
-				<div class="fr nav">
-					<ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
-						<li class="active" v-for="cate in categories" :key="cate.id">
-							<a :href="handleToType(cate)">{{cate.name}}</a>
-						</li>
-					</ul>
-				</div>
-				<a href="javascript:void(0)" id="navToggle">
-					<span></span>
-				</a>
 			</div>
 		</header>
 		<!--移动端的导航-->
@@ -56,32 +46,35 @@
 			<div class="logo">
 				<img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/logo.png" alt="" />
 			</div>
-			<ul class="ul" data-in="fadeInDown" data-out="fadeOutUp">
-				<li class="active" v-for="cate in categories" :key="cate.id">
-					<a :href="handleToType(cate)">{{cate.name}}</a>
-				</li>
-			</ul>
 		</div>
 		<main>
+			<center>
+				<!-- game_index_1 -->
+				<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
+					data-ad-slot="6965682803" data-ad-format="auto" data-full-width-responsive="true"></ins>
+				<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</center>
 			<section class="section">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
 							<div class="section-title text-center mb-4">
-								<h4 class="title">Popular</h4>
+								<h4 class="title">{{title}}</h4>
 							</div>
 						</div>
 					</div>
 					<center>
-						<!-- game_index_1 -->
+						<!-- game_index_2 -->
 						<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
-							data-ad-slot="6965682803" data-ad-format="auto" data-full-width-responsive="true"></ins>
+							data-ad-slot="8566539081" data-ad-format="auto" data-full-width-responsive="true"></ins>
 						<script>
 							(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
 					</center>
 					<div class="row">
-						<div class="col-lg-3 mt-4 pt-2" v-for="(item, index) in popular" :key="item.gameId">
+						<div class="col-lg-3 mt-4 pt-2" v-for="(item, index) in list" :key="item.gameId">
 							<a :href="handleToDetail(item.gameId, 'Popular')">
 								<div class="position-relative overflow-hidden blog  rounded shadow">
 									<div class="position-relative overflow-hidden">
@@ -105,16 +98,7 @@
 								</div>
 							</a>
 							<center v-if="index === 0">
-								<!-- game_index_2 -->
-								<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867"
-									data-ad-slot="8566539081" data-ad-format="auto" data-full-width-responsive="true"></ins>
-								<script>
-									(adsbygoogle = window.adsbygoogle || []).push({});
-								</script>
-							</center>
-							<center v-if="index === 1">
-								<script async="async" data-cfasync="false"
-									src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+								<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
 								<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
 							</center>
 						</div>
@@ -125,6 +109,34 @@
 				src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
 		</main>
 	</div>
+	<style>
+		.content {
+			background-color: #fff;
+		}
+
+		.play-imgs {
+			cursor: pointer;
+			position: absolute;
+			right: 0;
+		}
+
+		.play-imgs img {
+			width: 50px;
+		}
+
+		.img-fluid {
+			width: 100%;
+		}
+
+		.score-icon {
+			display: inline-block;
+			width: 24px;
+			height: 24px;
+			background-image: url(https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/start.svg);
+			background-repeat: no-repeat;
+			background-size: contain;
+		}
+	</style>
 </body>
 <style>
 	.content {
