--- a/game/index.html
+++ b/game/index.html
@@ -61,7 +61,7 @@
 					<div class="row">
 						<div class="col-12">
 							<div class="section-title text-center mb-4">
-								<h4 class="title">{{title}}</h4>
+								<h4 class="title">Popular</h4>
 							</div>
 						</div>
 					</div>
@@ -210,7 +210,6 @@
 		data() {
 			return {
 				showCate: false,
-				title: '',
 				gameData,
 				popular,
 				gameChannelId: 0,
