feat: add spacing div to detail pages for improved layout consistency

--- a/beauty/detail.html
+++ b/beauty/detail.html
@@ -54,6 +54,7 @@
         </li>
       </ul>
     </div>
+		<div style="height: 60px;"></div>
     <main>
 			<center>
 				<!-- game_detail_top -->
