--- a/game/detail.html
+++ b/game/detail.html
@@ -54,6 +54,7 @@
         </li>
       </ul>
     </div>
+		<div style="height: 60px;"></div>
     <main>
 			<center>
 				<!-- game_detail_top -->
