--- a/sports/detail.html
+++ b/sports/detail.html
@@ -53,6 +53,7 @@
         </li>
       </ul>
     </div>
+		<div style="height: 60px;"></div>
     <main>
 			<center>
 				<!-- game_detail_top -->
