--- a/sports/play.html
+++ b/sports/play.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/youngjuning/images@main/1742301937620.png" type="image/x-icon">
   <title>Aoki H5 Games</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
+	<script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9321981,document.createElement('script'))</script>
 </head>
 <body>
 	<div id="App" v-cloak>
@@ -29,13 +30,8 @@
         frameborder="0" scrolling="no" allowfullscreen></iframe>
       <div class="posterBanner" ref='topAd' v-html='poster4'></div>
     </div>
-		<center>
-			<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
-			<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
-		</center>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
   </div>
-	<script type='text/javascript' src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
 	<style>
     * {
       margin: 0;
